--- a/templates/items/playbook-sheet.hbs
+++ b/templates/items/playbook-sheet.hbs
@@ -15,13 +15,13 @@
 		<label class="tab-label">
 			<span class="tab-title">Rules</span>
 		</label>
-		{{editor content=data.rules target="data.rules" button=true owner=owner editable=editable}}
+		{{editor content=system.rules target="system.rules" button=true owner=owner editable=editable}}
 
-		{{#if (test isGM "||" data.rules_notes)}}
+		{{#if (test isGM "||" system.rules_notes)}}
 		<label class="tab-label">
 			<span class="tab-title">Additional Rules Notes</span>
 		</label>
-		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
+		{{editor content=system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
 		{{/if}}
 
 		{{#if isGM}}
