--- a/templates/parts/clock-sheet-row.hbs
+++ b/templates/parts/clock-sheet-row.hbs
@@ -8,7 +8,7 @@
 			activeTooltip="<b>Clock is Visible.</b><br>Click to hide."
 			inactiveClass="fas fa-eye-slash"
 			inactiveTooltip="<b>Clock is Hidden.</b><br>Click to display."
-			targetKey=(concat "data.clock_keys." keyID ".clocks." clockNum ".isVisible") }}
+			targetKey=(concat "system.clock_keys." keyID ".clocks." clockNum ".isVisible") }}
 		{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
 			cssClass="clock-toggle"
 			isToggled=clockData.isActive
@@ -16,7 +16,7 @@
 			activeTooltip="<b>Clock is Focused.</b><br>Click to mute."
 			inactiveClass="fas fa-bell-slash"
 			inactiveTooltip="<b>Clock is Muted.</b><br>Click to focus."
-			targetKey=(concat "data.clock_keys." keyID ".clocks." clockNum ".isActive") }}
+			targetKey=(concat "system.clock_keys." keyID ".clocks." clockNum ".isActive") }}
 	</td>
 	<td>
 		{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
@@ -26,12 +26,12 @@
 			activeTooltip="<b>Name is Visible.</b><br>Click to hide."
 			inactiveClass="fas fa-comment-slash"
 			inactiveTooltip="<b>Name is Hidden.</b><br>Click to display."
-			targetKey=(concat "data.clock_keys." keyID ".clocks." clockNum ".isNameVisible") }}
-		<input type="text" class="clock-input clock-input-display" name="data.clock_keys.{{keyID}}.clocks.{{clockNum}}.display" value="{{#if clockData}}{{clockData.display}}{{/if}}">
+			targetKey=(concat "system.clock_keys." keyID ".clocks." clockNum ".isNameVisible") }}
+		<input type="text" class="clock-input clock-input-display" name="system.clock_keys.{{keyID}}.clocks.{{clockNum}}.display" value="{{#if clockData}}{{clockData.display}}{{/if}}">
 	</td>
 	{{#if clockData}}
 	<td>
-		<select data-dtype="number" name="data.clock_keys.{{keyID}}.clocks.{{clockNum}}.size">
+		<select data-dtype="number" name="system.clock_keys.{{keyID}}.clocks.{{clockNum}}.size">
 			{{#select clockData.size}}
 			<option value="2">2</option>
 			<option value="3">3</option>
@@ -43,7 +43,7 @@
 			<option value="12">12</option>
 			{{/select}}
 		</select>
-		<select data-dtype="string" name="data.clock_keys.{{keyID}}.clocks.{{clockNum}}.color" data-color="{{clockData.color}}">
+		<select data-dtype="string" name="system.clock_keys.{{keyID}}.clocks.{{clockNum}}.color" data-color="{{clockData.color}}">
 			{{#select clockData.color}}
 			<option data-color="yellow" value="yellow">🟨</option>
 			<option data-color="red" value="red">🟥</option>
@@ -53,7 +53,7 @@
 		</select>
 	</td>
 	<td>
-		<select data-dtype="number" name="data.clock_keys.{{keyID}}.clocks.{{clockNum}}.value">
+		<select data-dtype="number" name="system.clock_keys.{{keyID}}.clocks.{{clockNum}}.value">
 			{{#select clockData.value}}
 			{{#times_from_0 clockData.size}}
 				<option value="{{this}}">{{this}}</option>
