--- a/templates/parts/factions.hbs
+++ b/templates/parts/factions.hbs
@@ -12,7 +12,7 @@
               <div class="item-body flex-horizontal">
                 <img src="{{faction.img}}" title="{{faction.name}}" width="24" height="24"/>
                 <div class="comp-title">{{faction.name}}</div>
-                <div class="comp-body-text">{{faction.data.description}}</div>
+                <div class="comp-body-text">{{faction.system.description}}</div>
               </div>
               <a class="comp-control comp-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i class="fas fa-trash"></i></a>
             </div>
