--- a/templates/items/crew_upgrade-sheet.hbs
+++ b/templates/items/crew_upgrade-sheet.hbs
@@ -16,24 +16,24 @@
 		<label class="tab-label">
 			<span class="tab-title">Description</span>
 		</label>
-		{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+		{{editor content=system.description target="system.description" button=true owner=owner editable=editable}}
 		{{/if}}
 
 		<label class="tab-label">
 			<span class="tab-title">Rules</span>
 		</label>
-		{{editor content=data.rules target="data.rules" button=true owner=owner editable=editable}}
+		{{editor content=system.rules target="system.rules" button=true owner=owner editable=editable}}
 
-		{{#if (test isGM "||" data.rules_notes)}}
+		{{#if (test isGM "||" system.rules_notes)}}
 		<label class="tab-label">
 			<span class="tab-title">Additional Rules Notes</span>
 		</label>
-		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
+		{{editor content=system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
 		{{/if}}
 
 		<div class="flex-horizontal">
 			<label>{{localize "BITD.Price"}}</label>
-			<input data-dtype="Number" type="number" name="data.price" value="{{data.price}}">
+			<input data-dtype="Number" type="number" name="system.price" value="{{system.price}}">
 		</div>
 
     {{#if isGM}}
