--- a/templates/npc-sheet.hbs
+++ b/templates/npc-sheet.hbs
@@ -12,40 +12,40 @@
 
 		<section class="sheet-top">
 			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}" placeholder="Who Are You?">
-			<input class="comp-concept sheet-subtitle shadowed" type="text" name="data.concept" value="{{data.concept}}"
+			<input class="comp-concept sheet-subtitle shadowed" type="text" name="system.concept" value="{{system.concept}}"
 				placeholder="Concept">
 
 			<div class="comp-arena comp">
 				<label>Arena:</label>
-				<input type="text" name="data.arena" value="{{data.arena}}">
+				<input type="text" name="system.arena" value="{{system.arena}}">
 			</div>
 			<div class="comp-heritage comp">
 				<label>Heritage:</label>
-				<input type="text" name="data.heritage" value="{{data.heritage}}">
+				<input type="text" name="system.heritage" value="{{system.heritage}}">
 			</div>
 			<div class="comp-district comp">
 				<label>District:</label>
-				<input type="text" name="data.district" value="{{data.district}}">
+				<input type="text" name="system.district" value="{{system.district}}">
 			</div>
 			<div class="comp-faction comp">
 				<label>Faction:</label>
-				<input type="text" name="data.faction" value="{{data.faction}}">
+				<input type="text" name="system.faction" value="{{system.faction}}">
 			</div>
 			<div class="comp-allies comp">
 				<label>Allies:</label>
-				<input type="text" name="data.allies" value="{{data.allies}}">
+				<input type="text" name="system.allies" value="{{system.allies}}">
 			</div>
 			<div class="comp-enemies comp">
 				<label>Enemies:</label>
-				<input type="text" name="data.enemies" value="{{data.enemies}}">
+				<input type="text" name="system.enemies" value="{{system.enemies}}">
 			</div>
 			<div class="comp-traits input-group">
-				<input class="shadowed" type="text" name="data.traits.0" value="{{data.traits.[0]}}" placeholder="Trait">
-				<input class="shadowed" type="text" name="data.traits.1" value="{{data.traits.[1]}}" placeholder="Trait">
-				<input class="shadowed" type="text" name="data.traits.2" value="{{data.traits.[2]}}" placeholder="Trait">
+				<input class="shadowed" type="text" name="system.traits.0" value="{{system.traits.[0]}}" placeholder="Trait">
+				<input class="shadowed" type="text" name="system.traits.1" value="{{system.traits.[1]}}" placeholder="Trait">
+				<input class="shadowed" type="text" name="system.traits.2" value="{{system.traits.[2]}}" placeholder="Trait">
 			</div>
-			<input class="comp-short-description shadowed" type="text" name="data.description_short"
-				value="{{data.description_short}}" placeholder="Short Description">
+			<input class="comp-short-description shadowed" type="text" name="system.description_short"
+				value="{{system.description_short}}" placeholder="Short Description">
 		</section>
 
 		<section class="flex-horizontal comp-tabs">
@@ -59,7 +59,7 @@
 				</nav>
 				<div id="comp-{{actor._id}}-description" class="tab flex-vertical description editor-tab"
 					data-tab="description">
-					{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+					{{editor content=system.description target="system.description" button=true owner=owner editable=editable}}
 				</div>
 
 				<div id="comp-{{actor._id}}-friends-and-foes" class="tab flex-vertical friends-and-foes"
@@ -94,17 +94,17 @@
 						{{#each randomizers as |data key|}}
 						<div class="comp-randomizer-field field-size-{{data.size}}">
 							{{> "systems/eunos-blades/templates/parts/toggle-icon.hbs"
-							isToggled=data.isLocked
+							isToggled=system.isLocked
 							activeClass="fas fa-lock"
 							activeTooltip="<b>Field Frozen</b><br>Click to Randomize"
 							inactiveClass="far fa-lock-open-alt"
 							inactiveTooltip="<b>Randomizing Field</b><br>Click to Freeze"
-							targetKey=(concat "data.randomizers." key ".isLocked") }}
+							targetKey=(concat "system.randomizers." key ".isLocked") }}
 							{{#if data.label}}
 							<label class="randomizer-label">{{data.label}}</label>
 							{{/if}}
 							<input class="randomizer-input" type="text" value="{{data.value}}"
-								name="data.randomizers.{{key}}.value" />
+								name="system.randomizers.{{key}}.value" />
 						</div>
 						{{/each}}
 					</div>
