--- a/templates/parts/cohort-block.hbs
+++ b/templates/parts/cohort-block.hbs
@@ -17,37 +17,37 @@
 
   <div class="cohort-block">
     <div class="label-stripe">
-      <div class="item-sheet-open">{{#if (eq data.cohort "Gang")}}Gang of {{#each data.gang_type as |gang_type key|}}{{gang_type}} {{/each}}{{/if}}{{#if (eq data.cohort "Expert")}}{{data.cohort}} {{data.expert_type}}{{/if}} (click to edit)</div>
-      <div>Q:{{data.quality}} S:{{data.scale}}</div>
+      <div class="item-sheet-open">{{#if (eq system.cohort "Gang")}}Gang of {{#each system.gang_type as |gang_type key|}}{{gang_type}} {{/each}}{{/if}}{{#if (eq system.cohort "Expert")}}{{system.cohort}} {{system.expert_type}}{{/if}} (click to edit)</div>
+      <div>Q:{{system.quality}} S:{{system.scale}}</div>
       <a class="comp-control comp-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
     </div>
     <div class="cohort-body">
 
       <div class="cohort-block-harm flex-horizontal">
-        {{#each data.harm_list as |harm harm_key|}}
-          {{#multiboxes ../data.harm}}
+        {{#each system.harm_list as |harm harm_key|}}
+          {{#multiboxes ../system.harm}}
           <input id="harm-{{harm_key}}-{{../_id}}" type="radio" name="harm.{{../_id}}" data-item="{{../_id}}" value="{{harm_key}}">
           <label for="harm-{{harm_key}}-{{../_id}}">{{localize harm.label}}</label>
           {{/multiboxes}}
         {{/each}}
       </div>
 
-      {{#if (eq data.cohort "Gang")}}
-        {{#each data.gang_type as |gang_type key|}}
+      {{#if (eq system.cohort "Gang")}}
+        {{#each system.gang_type as |gang_type key|}}
         <div>
-            {{#with (lookup ../data.gang_type_list gang_type)}}{{localize description}} {{/with}}
+            {{#with (lookup ../system.gang_type_list gang_type)}}{{localize description}} {{/with}}
         </div>
         {{/each}}
       {{/if}}
 
       <div class="flex-vertical">
         <div class="flex-vertical">
-          {{#each data.edges_list as |edge key|}}
+          {{#each system.edges_list as |edge key|}}
             {{#if edge.selected }}
               <div class="description">{{localize edge.description}} <b>({{localize edge.label}})</b></div>
             {{/if}}
           {{/each}}
-          {{#each data.flaws_list as |flaw key|}}
+          {{#each system.flaws_list as |flaw key|}}
             {{#if flaw.selected }}
               <div class="description">{{localize flaw.description}} <b>({{localize flaw.label}})</b></div>
             {{/if}}
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="description">{{localize data.description}}</div>
+      <div class="description">{{localize system.description}}</div>
     </div>
 
   </div>
