--- a/templates/parts/turf-list.hbs
+++ b/templates/parts/turf-list.hbs
@@ -15,15 +15,15 @@
 					</div>
 				{{/unless}}
 			{{/each}}
-			<textarea class="turf-name {{~#if ../can_edit}}{{#unless (eq id "8")}} turf-editable{{/unless}}{{/if}}" name="data.turfs.{{id}}.name" {{#unless ../can_edit}}readonly{{/unless}} {{#if (eq id "8")}}readonly{{/if}}>{{localize turf.name}}</textarea>
+			<textarea class="turf-name {{~#if ../can_edit}}{{#unless (eq id "8")}} turf-editable{{/unless}}{{/if}}" name="system.turfs.{{id}}.name" {{#unless ../can_edit}}readonly{{/unless}} {{#if (eq id "8")}}readonly{{/if}}>{{localize turf.name}}</textarea>
 			{{#if (eq id "8")}}
 			<label>Hunting Grounds:</label>
-			<textarea class="turf-description" name="data.hunting_grounds" spellcheck="false">{{../actor.system.hunting_grounds}}</textarea>
+			<textarea class="turf-description" name="system.hunting_grounds" spellcheck="false">{{../system.hunting_grounds}}</textarea>
 			{{else}}
 			{{#if (isTurfBlock turf.name)}}
-			<textarea class="turf-description" placeholder="(District & Details)" name="data.turfs.{{id}}.description" spellcheck="false">{{localize turf.description}}</textarea>
+			<textarea class="turf-description" placeholder="(District & Details)" name="system.turfs.{{id}}.description" spellcheck="false">{{localize turf.description}}</textarea>
 			{{else}}
-			<textarea class="turf-description {{~#if ../can_edit}} turf-editable{{/if}}" name="data.turfs.{{id}}.description" {{#unless ../can_edit}}readonly{{/unless}}>{{localize turf.description}}</textarea>
+			<textarea class="turf-description {{~#if ../can_edit}} turf-editable{{/if}}" name="system.turfs.{{id}}.description" {{#unless ../can_edit}}readonly{{/unless}}>{{localize turf.description}}</textarea>
 			{{/if}}
 			{{/if}}
 			{{#unless ../can_edit}}
