--- a/templates/items/cohort-sheet.hbs
+++ b/templates/items/cohort-sheet.hbs
@@ -16,7 +16,7 @@
       <label class="tab-label">
         <span class="tab-title">Description</span>
       </label>
-      {{editor content=system.description target="system.description" button=true owner=owner editable=editable}}
+      {{editor system.description target="system.description" button=true owner=owner editable=editable}}
       {{/if}}
 
       <div class="label-stripe">{{localize "BITD.Information"}}</div>
