--- a/scss/components/_clocks.scss
+++ b/scss/components/_clocks.scss
@@ -60,6 +60,7 @@
 			circle {
 				height: var(--clock-frame-size);
 				width: var(--clock-frame-size);
+				fill: var(--blades-white-bright);
 				// transform: translate(-50%, -50%);
 				// top: 50%;
 				// left: 50%;
