--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -52,6 +52,7 @@
 			remButton=true
 			}}
 
+			{{#if items.playbook}}
 			{{> "systems/eunos-blades/templates/components/comp.hbs" items.vice
 			id=items.vice.id
 			class="comp-vice comp-vertical"
@@ -61,6 +62,10 @@
 			addButton=true
 			remButton=true
 			}}
+			{{else}}
+			<div class="comp-vice comp-vertical comp"></div>
+			{{/if}}
+
 
 			{{> "systems/eunos-blades/templates/components/comp.hbs" actors.crew
 			class="comp-crew comp-vertical"
@@ -97,10 +102,14 @@
 			dotline=traumaData.dotline
 			}}
 
+			{{#if items.playbook}}
 			{{> "systems/eunos-blades/templates/components/comp.hbs"
 			class="comp-trauma-conditions"
 			compContainer=traumaData.compContainer
 			}}
+			{{else}}
+			<div class="comp-trauma-conditions comp"></div>
+			{{/if}}
 
 		</section>
 
@@ -126,10 +135,12 @@
 						</td>
 						<td class="harm-effect">{{localize "BITD.NeedHelp"}}</td>
 						<td class="healing-clock clock-container" rowspan="3">
+							{{#if items.playbook}}
 							{{> "systems/eunos-blades/templates/components/clock.hbs"
 							target="system.healing.value"
 							data=healing_clock
 							}}
+							{{/if}}
 						</td>
 						<td class="armor-uses" rowspan="3">
 							{{> "systems/eunos-blades/templates/components/armor.hbs"
@@ -178,9 +189,11 @@
 				{{!-- Abilities Tab --}}
 				<div class="tab abilities flex-vertical" data-tab="abilities">
 					<label class="comp tab-label" data-comp-cat="Ability" data-comp-type="Item">
+						{{#if items.playbook}}
 						<a class="comp-control comp-button comp-add">
 							<i class="fas fa-plus-square"></i>
 						</a>
+						{{/if}}
 						<span class="tab-title">{{localize "BITD.Abilities"}}</span>
 					</label>
 
@@ -198,8 +211,12 @@
 				{{!-- Loadout Tab --}}
 				<div class="tab loadout flex-vertical" data-tab="loadout">
 					<label class="comp tab-label" data-comp-cat="Gear" data-comp-type="Item">
+						{{#if (test items.playbook "&&" (test loadData.selLoadCount ">" 0))}}
 						<a class="comp-control comp-button comp-add"><i class="fas fa-plus-square"></i></a>
+						{{/if}}
 						<span class="tab-title">{{localize "BITD.Loadout"}}</span>
+						{{log this}}
+						{{log loadData}}
 						<select class="load-selector" data-dtype="String" name="system.loadout.selected">
 							{{#select loadData.selLoadLevel}}
 							<option value="" hidden disabled selected></option>
@@ -228,13 +245,16 @@
 				{{!-- Acquaintances Tab --}}
 				<div class="tab acquaintances flex-vertical" data-tab="acquaintances">
 					<label class="comp tab-label" data-comp-cat="Friend" data-comp-type="Actor" data-comp-tags="Friend">
+						{{#if items.playbook}}
 						<a class="comp-control comp-button comp-add">
 							<i class="fas fa-plus-square"></i>
 						</a>
+						{{/if}}
 						<span class="tab-title">{{#if friendsName}}{{friendsName}}{{else}}{{acquaintancesName}}{{/if}}</span>
 					</label>
 
 					<div class="comp comp-horizontal portrait-container actors-container">
+						{{#if items.playbook}}
 						{{> "systems/eunos-blades/templates/components/portrait.hbs" actors.vice_purveyor
 						id = actors.vice_purveyor.id
 						label = "Vice Purveyor"
@@ -243,6 +263,7 @@
 						remButton=true
 						addButton=true
 						}}
+						{{/if}}
 						{{#each actors.friends as |actor|}}
 						{{> "systems/eunos-blades/templates/components/portrait.hbs" actor
 						cat = "Friend"
@@ -289,13 +310,13 @@
 					<label class="tab-label">
 						<span class="tab-title">Description</span>
 					</label>
-					{{editor content=system.description target="system.description" button=true owner=owner
+					{{editor system.description target="system.description" button=true owner=owner
 					editable=editable}}
 
 					<label class="tab-label">
 						<span class="tab-title">{{localize "BITD.Notes"}}</span>
 					</label>
-					{{editor content=system.notes target="system.notes" button=true owner=owner editable=editable}}
+					{{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
 				</div>
 
 				{{!-- GM-ONLY TABS --}}
@@ -306,7 +327,7 @@
 					<label class="tab-label">
 						<span class="tab-title">GM Notes</span>
 					</label>
-					{{editor content=system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
+					{{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
 					<label class="tab-label">
 						<span class="tab-title">{{localize "BITD.Effects"}}</span>
 					</label>
@@ -338,8 +359,10 @@
 				<div class="comp comp-horizontal comp-attribute">
 					<label class="comp-label" data-roll-attribute="{{attribute_name}}">{{case "title" attribute_name}}</label>
 					<div class="comp-body">
+						{{log "TESTING XP: "}}
+						{{log ../system.experience}}
 						{{> "systems/eunos-blades/templates/parts/dotline.hbs"
-						data=(lookup system.experience attribute_name)
+						data=(lookup ../system.experience attribute_name)
 						target=(concat "system.experience." attribute_name ".value")
 						svgKey="teeth.tall"
 						svgFull="full|frame"
