--- a/templates/items/crew_ability-sheet.hbs
+++ b/templates/items/crew_ability-sheet.hbs
@@ -16,16 +16,16 @@
 			<label class="tab-label">
 				<span class="tab-title">Description</span>
 			</label>
-			{{editor content=system.description target="system.description" button=true owner=owner editable=editable}}
+			{{editor system.description target="system.description" button=true owner=owner editable=editable}}
 			{{/if}}
 
 			<label class="tab-label">
 				<span class="tab-title">Rules</span>
 			</label>
-			{{editor content=system.rules target="system.rules" button=true owner=owner editable=editable}}
+			{{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
 
 			{{#if (test isGM "||" system.rules_notes)}}
-			{{editor content=system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
+			{{editor system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
 			{{/if}}
 
 			<div class="flex-vertical">
